@@ -23,6 +23,11 @@ available at http://www.masonhq.com/code/history.html.
   named_component_subs. Turning this on makes it possible to profile
   components.
 
+- Added a new Request parameter, errors_are_exceptions. When this is
+  set to false, errors thrown by components are never upgraded to
+  exception objects, which can be a performance boost in some code
+  bases.
+
 
 1.35  Oct 17, 2006
 
